[package]
name = "laravel"
version = "0.1.3"
edition = "2021"
authors = ["Samir Djelal <ssdjelal@gmail.com>"]
readme = "README.md"
repository = "https://github.com/samirdjelal/laravel-deployer"
license = "MIT"
homepage = "https://github.com/samirdjelal/laravel-deployer"
documentation = "https://docs.rs/laravel"
keywords = ["laravel", "deployer", "deploy", "zero-downtime", "continuous-delivery"]
description = "Laravel Zero Downtime"
exclude = [
	"screenshot/*",
	"examples/*",
]

[lib]
name = "laravel"
path = "src/lib.rs"

[[bin]]
name = "deployer"
path = "src/main.rs"

[dependencies]
yaml-rust = "0.4.5"
ssh2 = "0.9"