[package]
name = "laravel"
version = "0.1.4"
edition = "2021"
authors = ["Samir Djelal <ssdjelal@gmail.com>"]
readme = "README.md"
repository = "https://github.com/samirdjelal/laravel"
license = "MIT"
homepage = "https://github.com/samirdjelal/laravel"
documentation = "https://docs.rs/laravel"
keywords = ["laravel", "laravel-cli", "automation", "laravel-helper", "hepler"]
description = "Laravel Zero Downtime"
exclude = [
	"screenshot/*",
	"examples/*",
]

[lib]
name = "laravel"
path = "src/lib.rs"

[[bin]]
name = "laravel-cli"
path = "src/main.rs"

[dependencies]